cluster/apps/mkdocs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mkdocs
  namespace: mkdocs
spec:
  replicas: 1
  selector:
    matchLabels:
      ocf.berkeley.edu/flux: mkdocs
  template:
    metadata:
      labels:
        ocf.berkeley.edu/flux: mkdocs
    spec:
      containers:
      - image: ghcr.io/ocf/ocf-docs:latest # {"$imagepolicy": "flux-system:mkdocs"}
        imagePullPolicy: IfNotPresent
        name: main
        ports:
        - containerPort: 80
      dnsConfig:
        searches:
        - ocf.berkeley.edu
      dnsPolicy: ClusterFirst
