cluster/apps/mkdocs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mkdocs
  namespace: mkdocs
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    ocf.berkeley.edu/flux: mkdocs
