cluster/apps/mkdocs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mkdocs
  namespace: mkdocs
spec:
  rules:
  - host: staging-c.ocf.berkeley.edu
    http:
      paths:
      - backend:
          service:
            name: mkdocs
            port:
              number: 80
        path: /
        pathType: Prefix
  # tls:
  # - hosts:
  #   - staging-c.ocf.berkeley.edu
  #   secretName: mkdocs-tls
